--- a/UnofficialCrusaderPatch/MainWindow.xaml
+++ b/UnofficialCrusaderPatch/MainWindow.xaml
@@ -5,29 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UnofficialCrusaderPatch"
         mc:Ignorable="d"
-        Title="Unofficial Patcher" Height="480" Width="600" ResizeMode="NoResize">
+        Title="Unofficial Patcher" Height="380" Width="500" ResizeMode="NoResize">
+    <Window.Background>
+        <ImageBrush ImageSource="background.jpg"
+        Viewport="0,0,200,200"
+        ViewportUnits="Absolute"
+        TileMode="Tile"
+        Stretch="None"/>
+    </Window.Background>
     <Grid>
-        <Image Source="background.jpg" Stretch="Fill"/>
+        <Image Source="frame.jpg" Margin="0,296,0 ,0" Stretch="Fill"></Image>
+        <Image Source="frame.jpg" Margin="0,0,0,296" Stretch="Fill">
+            <Image.LayoutTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="180"/>
+                </TransformGroup>
+            </Image.LayoutTransform>
+        </Image>
         <Grid x:Name="infoGrid" Visibility="Visible">
-            <Button x:Name="bInfoContinue" Content="Weiter" HorizontalAlignment="Left" Height="31" Margin="396,364,0,0" VerticalAlignment="Top" Width="124" RenderTransformOrigin="0.502,0.504" Click="bInfoContinue_Click"/>
-            <TextBox x:Name="infoBox" HorizontalAlignment="Left" Height="268" Margin="66,91,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="454" IsReadOnly="True" VerticalScrollBarVisibility="Auto"/>
-            <TextBlock x:Name="linkLabel" Text="GitHub-Repository: " TextAlignment="Center" HorizontalAlignment="Left" Height="24" Margin="66,62,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="397">
+            <Button x:Name="bInfoContinue" Content="Weiter" HorizontalAlignment="Left" Height="31" Margin="350,300,0,0" VerticalAlignment="Top" Width="124" RenderTransformOrigin="0.502,0.504" Click="bInfoContinue_Click"/>
+            <TextBox x:Name="infoBox" HorizontalAlignment="Left" Height="204" Margin="10,82,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" IsReadOnly="True" VerticalScrollBarVisibility="Auto" Background="#99FFFFFF" FontSize="14" SelectionBrush="#FFD09337" BorderBrush="#FFABADB3"/>
+            <TextBlock x:Name="linkLabel" Text="GitHub-Repository: " TextAlignment="Center" HorizontalAlignment="Left" Height="27" Margin="10,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="16" FontWeight="Bold" Background="#99FFFFFF">
                 <Hyperlink NavigateUri="https://git.io/fxyw1" RequestNavigate="Hyperlink_RequestNavigate">
                     https://git.io/fxyw1
                 </Hyperlink>
             </TextBlock>
         </Grid>
         <Grid x:Name="pathGrid" Visibility="Hidden">
-            <Button x:Name="bPathInstall" Content="Installieren" HorizontalAlignment="Left" Height="30" Margin="397,364,0,0" VerticalAlignment="Top" Width="123" RenderTransformOrigin="0.502,0.504" Click="bPathInstall_Click"/>
-            <TextBox x:Name="tbPath" HorizontalAlignment="Left" Height="28" Margin="70,150,0,0" VerticalAlignment="Top" Width="391" MaxLines="1"/>
-            <Button x:Name="bPathSearch" Content="Suchen" HorizontalAlignment="Left" Height="28" Margin="466,150,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.502,0.504" Click="bPathSearch_Click"/>
-            <Button x:Name="bPathBack" Content="Zurück" HorizontalAlignment="Left" Height="30" Margin="70,364,0,0" VerticalAlignment="Top" Width="102" RenderTransformOrigin="0.502,0.504" Click="bPathBack_Click"/>
-        </Grid>
-        <Grid x:Name="setupGrid" Visibility="Hidden">
-            <TextBox x:Name="setupBox" HorizontalAlignment="Left" Height="257" Margin="68,102,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="453" IsReadOnly="True" VerticalScrollBarVisibility="Auto"/>
-            <ProgressBar x:Name="pbSetup" HorizontalAlignment="Left" Height="29" Margin="68,59,0,0" VerticalAlignment="Top" Width="453"/>
-            <Button x:Name="bSetupFinish" Content="Fertig" HorizontalAlignment="Left" Height="30" Margin="406,364,0,0" VerticalAlignment="Top" Width="115" Click="bSetupFinish_Click"/>
-
+            <Button x:Name="bPathInstall" Content="Installieren" HorizontalAlignment="Left" Height="30" Margin="350,301,0,0" VerticalAlignment="Top" Width="123" RenderTransformOrigin="0.502,0.504" Click="bPathInstall_Click"/>
+            <TextBox x:Name="tbPath" HorizontalAlignment="Left" Height="28" Margin="10,127,0,0" VerticalAlignment="Top" Width="407" MaxLines="1" Background="#99FFFFFF"/>
+            <Button x:Name="bPathSearch" Content="Suchen" HorizontalAlignment="Left" Height="28" Margin="422,127,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.502,0.504" Click="bPathSearch_Click"/>
+            <Button x:Name="bPathBack" Content="Zurück" HorizontalAlignment="Left" Height="30" Margin="10,301,0,0" VerticalAlignment="Top" Width="123" RenderTransformOrigin="0.502,0.504" Click="bPathBack_Click"/>
+            <TextBox x:Name="pathBox" HorizontalAlignment="Left" Height="32" Margin="10,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" Background="#99FFFFFF" FontSize="14" FontWeight="Bold" IsReadOnly="True"/>
+            <ProgressBar x:Name="pbSetup" HorizontalAlignment="Left" Height="29" Margin="10,255,0,0" VerticalAlignment="Top" Width="466" Background="#99FFFFFF"/>
         </Grid>
     </Grid>
 </Window>
