--- a/UnofficialCrusaderPatch/MainWindow.xaml
+++ b/UnofficialCrusaderPatch/MainWindow.xaml
@@ -7,37 +7,63 @@
         mc:Ignorable="d"
         Title="Unofficial Patcher" Height="380" Width="500" ResizeMode="NoResize">
     <Window.Background>
-        <ImageBrush ImageSource="background.jpg"
+        <ImageBrush ImageSource="Graphics/background.jpg"
         Viewport="0,0,200,200"
         ViewportUnits="Absolute"
         TileMode="Tile"
         Stretch="None"/>
     </Window.Background>
     <Grid>
-        <Image Source="frame.jpg" Margin="0,296,0 ,0" Stretch="Fill"></Image>
-        <Image Source="frame.jpg" Margin="0,0,0,296" Stretch="Fill">
+        <Image Source="Graphics/frame.jpg" Margin="0,296,0 ,0" Stretch="Fill"></Image>
+        <Image Source="Graphics/frame.jpg" Margin="0,0,0,296" Stretch="Fill">
             <Image.LayoutTransform>
                 <TransformGroup>
                     <RotateTransform Angle="180"/>
                 </TransformGroup>
             </Image.LayoutTransform>
         </Image>
-        <Grid x:Name="infoGrid" Visibility="Visible">
-            <Button x:Name="bInfoContinue" Content="Weiter" HorizontalAlignment="Left" Height="31" Margin="350,300,0,0" VerticalAlignment="Top" Width="124" RenderTransformOrigin="0.502,0.504" Click="bInfoContinue_Click"/>
-            <TextBox x:Name="infoBox" HorizontalAlignment="Left" Height="204" Margin="10,82,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" IsReadOnly="True" VerticalScrollBarVisibility="Auto" Background="#99FFFFFF" FontSize="14" SelectionBrush="#FFD09337" BorderBrush="#FFABADB3"/>
-            <TextBlock x:Name="linkLabel" Text="GitHub-Repository: " TextAlignment="Center" HorizontalAlignment="Left" Height="27" Margin="10,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="16" FontWeight="Bold" Background="#99FFFFFF">
-                <Hyperlink NavigateUri="https://git.io/fxyw1" RequestNavigate="Hyperlink_RequestNavigate">
-                    https://git.io/fxyw1
-                </Hyperlink>
-            </TextBlock>
+        <Grid x:Name="pathGrid" Visibility="Visible">
+            <TextBlock x:Name="linkLabel" TextAlignment="Center" HorizontalAlignment="Left" Height="116" Margin="10,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="14" Background="#CCFFFFFF"/>
+            <TextBox x:Name="pathBox" Background="#A5FFFFFF" HorizontalAlignment="Left" Height="60" Margin="10,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="12" IsReadOnly="True"/>
+            <Button x:Name="pButtonContinue" Content="Weiter" HorizontalAlignment="Left" Height="30" Margin="350,301,0,0" VerticalAlignment="Top" Width="123" Click="pButtonContinue_Click"/>
+            <TextBox x:Name="pTextBoxPath" HorizontalAlignment="Left" Height="28" Margin="19,227,0,0" VerticalAlignment="Top" Width="386" MaxLines="1" Background="#99FFFFFF"/>
+            <Button x:Name="pButtonSearch" Content="Suchen" HorizontalAlignment="Left" Height="28" Margin="410,227,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.502,0.504" Click="bPathSearch_Click"/>
+            <Button x:Name="pButtonCancel" Content="Abbrechen" HorizontalAlignment="Left" Height="30" Margin="10,301,0,0" VerticalAlignment="Top" Width="123" Click="pButtonCancel_Click"/>
         </Grid>
-        <Grid x:Name="pathGrid" Visibility="Hidden">
-            <Button x:Name="bPathInstall" Content="Installieren" HorizontalAlignment="Left" Height="30" Margin="350,301,0,0" VerticalAlignment="Top" Width="123" RenderTransformOrigin="0.502,0.504" Click="bPathInstall_Click"/>
-            <TextBox x:Name="tbPath" HorizontalAlignment="Left" Height="28" Margin="10,127,0,0" VerticalAlignment="Top" Width="407" MaxLines="1" Background="#99FFFFFF"/>
-            <Button x:Name="bPathSearch" Content="Suchen" HorizontalAlignment="Left" Height="28" Margin="422,127,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.502,0.504" Click="bPathSearch_Click"/>
-            <Button x:Name="bPathBack" Content="Zurück" HorizontalAlignment="Left" Height="30" Margin="10,301,0,0" VerticalAlignment="Top" Width="123" RenderTransformOrigin="0.502,0.504" Click="bPathBack_Click"/>
-            <TextBox x:Name="pathBox" HorizontalAlignment="Left" Height="32" Margin="10,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" Background="#99FFFFFF" FontSize="14" FontWeight="Bold" IsReadOnly="True"/>
-            <ProgressBar x:Name="pbSetup" HorizontalAlignment="Left" Height="29" Margin="10,255,0,0" VerticalAlignment="Top" Width="466" Background="#99FFFFFF"/>
+        <Grid x:Name="installGrid" Visibility="Hidden">
+            <ProgressBar x:Name="pbSetup" HorizontalAlignment="Left" Height="20" Margin="10,271,0,0" VerticalAlignment="Top" Width="466" Background="#99FFFFFF" Foreground="#FF832708"/>
+            <Button x:Name="iButtonBack" Content="Zurück" HorizontalAlignment="Left" Height="30" Margin="10,301,0,0" VerticalAlignment="Top" Width="123" RenderTransformOrigin="0.502,0.504" Click="iButtonBack_Click"/>
+            <Button x:Name="iButtonInstall" Content="Installieren" HorizontalAlignment="Left" Height="31" Margin="350,300,0,0" VerticalAlignment="Top" Width="124" RenderTransformOrigin="0.502,0.504" Click="iButtonInstall_Click"/>
+            <TreeView x:Name="infoBox" HorizontalAlignment="Left" Height="215" Margin="10,51,0,0" VerticalAlignment="Top" Width="466" Background="#CCFFFFFF" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <TreeViewItem x:Name="tviBalancing" IsExpanded="True">
+                    <TreeViewItem.ItemTemplate>
+                        <HierarchicalDataTemplate>
+                            <CheckBox IsChecked="{Binding IsChecked}">
+                                <TextBlock Text="{Binding Description}" TextWrapping="Wrap" FontSize="14" Width="400" Margin="0,-1,0,0"/>
+                            </CheckBox>
+                        </HierarchicalDataTemplate>
+                    </TreeViewItem.ItemTemplate>
+                    <TreeViewItem.Header>
+                        <CheckBox x:Name="cbBalancing" IsChecked="true" Checked="cbBalancing_Check" Unchecked="cbBalancing_Check">
+                            <TextBlock Text="Balancing" TextWrapping="Wrap" FontSize="12" Width="400" FontWeight="Bold"/>
+                        </CheckBox>
+                    </TreeViewItem.Header>
+                </TreeViewItem>
+                <TreeViewItem x:Name="tviBugfixes" IsExpanded="True">
+                    <TreeViewItem.ItemTemplate>
+                        <HierarchicalDataTemplate>
+                            <CheckBox IsChecked="{Binding IsChecked}">
+                                <TextBlock Text="{Binding Description}" TextWrapping="Wrap" FontSize="14" Width="400" Margin="0,-1,0,0"/>
+                            </CheckBox>
+                        </HierarchicalDataTemplate>
+                    </TreeViewItem.ItemTemplate>
+                    <TreeViewItem.Header>
+                        <CheckBox x:Name="cbBugfixes" IsChecked="true" Checked="cbBugfix_Check" Unchecked="cbBugfix_Check">
+                            <TextBlock Text="Bugfixes" TextWrapping="Wrap" FontSize="12" Width="400" FontWeight="Bold"/>
+                        </CheckBox>
+                    </TreeViewItem.Header>
+                </TreeViewItem>
+            </TreeView>
         </Grid>
     </Grid>
 </Window>
