--- a/UnofficialCrusaderPatch/MainWindow.xaml
+++ b/UnofficialCrusaderPatch/MainWindow.xaml
@@ -26,40 +26,41 @@
             <TextBlock x:Name="linkLabel" TextAlignment="Center" HorizontalAlignment="Left" Height="116" Margin="10,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="14" Background="#CCFFFFFF"/>
             <TextBox x:Name="pathBox" Background="#A5FFFFFF" HorizontalAlignment="Left" Height="60" Margin="10,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="12" IsReadOnly="True"/>
             <Button x:Name="pButtonContinue" Content="Weiter" HorizontalAlignment="Left" Height="30" Margin="350,301,0,0" VerticalAlignment="Top" Width="123" Click="pButtonContinue_Click"/>
-            <TextBox x:Name="pTextBoxPath" HorizontalAlignment="Left" Height="28" Margin="19,227,0,0" VerticalAlignment="Top" Width="386" MaxLines="1" Background="#99FFFFFF"/>
+            <TextBox x:Name="pTextBoxPath" HorizontalAlignment="Left" Height="28" Margin="19,227,0,0" VerticalAlignment="Top" Width="386" MaxLines="1" Background="#99FFFFFF" FontSize="14"/>
             <Button x:Name="pButtonSearch" Content="Suchen" HorizontalAlignment="Left" Height="28" Margin="410,227,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.502,0.504" Click="bPathSearch_Click"/>
             <Button x:Name="pButtonCancel" Content="Abbrechen" HorizontalAlignment="Left" Height="30" Margin="10,301,0,0" VerticalAlignment="Top" Width="123" Click="pButtonCancel_Click"/>
+            <Button x:Name="pButtonUninstall" Content="Deinstallieren" HorizontalAlignment="Left" Height="30" Margin="179,301,0,0" VerticalAlignment="Top" Width="123" Click="pButtonUninstall_Click"/>
         </Grid>
         <Grid x:Name="installGrid" Visibility="Hidden">
             <ProgressBar x:Name="pbSetup" HorizontalAlignment="Left" Height="20" Margin="10,271,0,0" VerticalAlignment="Top" Width="466" Background="#99FFFFFF" Foreground="#FF832708"/>
             <Button x:Name="iButtonBack" Content="Zurück" HorizontalAlignment="Left" Height="30" Margin="10,301,0,0" VerticalAlignment="Top" Width="123" RenderTransformOrigin="0.502,0.504" Click="iButtonBack_Click"/>
             <Button x:Name="iButtonInstall" Content="Installieren" HorizontalAlignment="Left" Height="31" Margin="350,300,0,0" VerticalAlignment="Top" Width="124" RenderTransformOrigin="0.502,0.504" Click="iButtonInstall_Click"/>
-            <TreeView x:Name="infoBox" HorizontalAlignment="Left" Height="215" Margin="10,51,0,0" VerticalAlignment="Top" Width="466" Background="#CCFFFFFF" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-                <TreeViewItem x:Name="tviBalancing" IsExpanded="True">
+            <TreeView x:Name="optionView" HorizontalAlignment="Left" Height="215" Margin="10,51,0,0" VerticalAlignment="Top" Width="466" Background="#CCFFFFFF" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <TreeViewItem x:Name="tviBugfixes" IsExpanded="True" Focusable="False">
                     <TreeViewItem.ItemTemplate>
                         <HierarchicalDataTemplate>
-                            <CheckBox IsChecked="{Binding IsChecked}">
-                                <TextBlock Text="{Binding Description}" TextWrapping="Wrap" FontSize="14" Width="400" Margin="0,-1,0,0"/>
-                            </CheckBox>
-                        </HierarchicalDataTemplate>
-                    </TreeViewItem.ItemTemplate>
-                    <TreeViewItem.Header>
-                        <CheckBox x:Name="cbBalancing" IsChecked="true" Checked="cbBalancing_Check" Unchecked="cbBalancing_Check">
-                            <TextBlock Text="Balancing" TextWrapping="Wrap" FontSize="12" Width="400" FontWeight="Bold"/>
-                        </CheckBox>
-                    </TreeViewItem.Header>
-                </TreeViewItem>
-                <TreeViewItem x:Name="tviBugfixes" IsExpanded="True">
-                    <TreeViewItem.ItemTemplate>
-                        <HierarchicalDataTemplate>
-                            <CheckBox IsChecked="{Binding IsChecked}">
-                                <TextBlock Text="{Binding Description}" TextWrapping="Wrap" FontSize="14" Width="400" Margin="0,-1,0,0"/>
+                            <CheckBox IsChecked="{Binding IsChecked}" Background="{Binding Background}" Unchecked="CheckBox_Unchecked">
+                                <TextBlock Text="{Binding Ident}" TextWrapping="Wrap" FontSize="14" Width="400" Margin="0,-1,0,0" Initialized="TextBlock_Initialized"/>
                             </CheckBox>
                         </HierarchicalDataTemplate>
                     </TreeViewItem.ItemTemplate>
                     <TreeViewItem.Header>
                         <CheckBox x:Name="cbBugfixes" IsChecked="true" Checked="cbBugfix_Check" Unchecked="cbBugfix_Check">
                             <TextBlock Text="Bugfixes" TextWrapping="Wrap" FontSize="12" Width="400" FontWeight="Bold"/>
+                        </CheckBox>
+                    </TreeViewItem.Header>
+                </TreeViewItem>
+                <TreeViewItem x:Name="tviBalancing" IsExpanded="True" Focusable="False">
+                    <TreeViewItem.ItemTemplate>
+                        <HierarchicalDataTemplate>
+                            <CheckBox IsChecked="{Binding IsChecked}" Background="{Binding Background}" Unchecked="CheckBox_Unchecked">
+                                <TextBlock Text="{Binding Ident}" TextWrapping="Wrap" FontSize="14" Width="400" Margin="0,-1,0,0" Initialized="TextBlock_Initialized"/>
+                            </CheckBox>
+                        </HierarchicalDataTemplate>
+                    </TreeViewItem.ItemTemplate>
+                    <TreeViewItem.Header>
+                        <CheckBox x:Name="cbBalancing" Checked="cbBalancing_Check" Unchecked="cbBalancing_Check">
+                            <TextBlock Text="Balancing" TextWrapping="Wrap" FontSize="12" Width="400" FontWeight="Bold"/>
                         </CheckBox>
                     </TreeViewItem.Header>
                 </TreeViewItem>
