--- a/UnofficialCrusaderPatch/MainWindow.xaml
+++ b/UnofficialCrusaderPatch/MainWindow.xaml
@@ -23,11 +23,13 @@
             </Image.LayoutTransform>
         </Image>
         <Grid x:Name="pathGrid" Visibility="Visible">
-            <TextBlock x:Name="linkLabel" TextAlignment="Center" HorizontalAlignment="Left" Height="116" Margin="10,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="14" Background="#CCFFFFFF"/>
-            <TextBox x:Name="pathBox" Background="#A5FFFFFF" HorizontalAlignment="Left" Height="60" Margin="10,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="12" IsReadOnly="True"/>
+            <ScrollViewer Height="143" Margin="10,55,0,0" VerticalAlignment="Top" Width="466">
+                <TextBlock x:Name="linkLabel" ScrollViewer.VerticalScrollBarVisibility="Auto" TextAlignment="Center" TextWrapping="Wrap" FontSize="14" Background="#CCFFFFFF"/>
+            </ScrollViewer>
+            <TextBox x:Name="pathBox" Background="#A5FFFFFF" HorizontalAlignment="Left" Height="60" Margin="9,219,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="466" FontSize="12" IsReadOnly="True"/>
             <Button x:Name="pButtonContinue" Content="Weiter" HorizontalAlignment="Left" Height="30" Margin="350,301,0,0" VerticalAlignment="Top" Width="123" Click="pButtonContinue_Click"/>
-            <TextBox x:Name="pTextBoxPath" HorizontalAlignment="Left" Height="28" Margin="19,227,0,0" VerticalAlignment="Top" Width="386" MaxLines="1" Background="#99FFFFFF" FontSize="14"/>
-            <Button x:Name="pButtonSearch" Content="Suchen" HorizontalAlignment="Left" Height="28" Margin="410,227,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.502,0.504" Click="bPathSearch_Click"/>
+            <TextBox x:Name="pTextBoxPath" HorizontalAlignment="Left" Height="28" Margin="18,238,0,0" VerticalAlignment="Top" Width="386" MaxLines="1" Background="#99FFFFFF" FontSize="14"/>
+            <Button x:Name="pButtonSearch" Content="Suchen" HorizontalAlignment="Left" Height="28" Margin="409,238,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.502,0.504" Click="bPathSearch_Click"/>
             <Button x:Name="pButtonCancel" Content="Abbrechen" HorizontalAlignment="Left" Height="30" Margin="10,301,0,0" VerticalAlignment="Top" Width="123" Click="pButtonCancel_Click"/>
             <Button x:Name="pButtonUninstall" Content="Deinstallieren" HorizontalAlignment="Left" Height="30" Margin="179,301,0,0" VerticalAlignment="Top" Width="123" Click="pButtonUninstall_Click"/>
         </Grid>
