--- a/UnofficialCrusaderPatch/App.xaml
+++ b/UnofficialCrusaderPatch/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="UnofficialCrusaderPatch.App"
+﻿<Application x:Class="UCP.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UnofficialCrusaderPatch"
+             xmlns:local="clr-namespace:UCP"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
