--- a/UnofficialCrusaderPatch/Localization/LanguageWindow.xaml
+++ b/UnofficialCrusaderPatch/Localization/LanguageWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="UnofficialCrusaderPatch.LanguageWindow"
+﻿<Window x:Class="UCP.LanguageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UnofficialCrusaderPatch"
+        xmlns:local="clr-namespace:UCP"
         mc:Ignorable="d"
         Title="Choose a language" Height="184.718" Width="216.153" ResizeMode="NoResize">
     <Grid>
