--- a/UnofficialCrusaderPatch/MainWindow.xaml
+++ b/UnofficialCrusaderPatch/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="UnofficialCrusaderPatch.MainWindow"
+﻿<Window x:Class="UCP.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UnofficialCrusaderPatch"
+        xmlns:local="clr-namespace:UCP"
         mc:Ignorable="d"
         Title="Unofficial Patcher" Height="400" Width="500" ResizeMode="NoResize">
     <Window.Background>
