Fix player color deselection does not move shield to red color

--- a/UnofficialCrusaderPatchGUI/Views/Controls/Other/Control_o_playercolor.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/Controls/Other/Control_o_playercolor.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Expander x:Name="expander" IsExpanded="false">
         <Expander.Header>
-            <CheckBox Content="{DynamicResource o_playercolor}" x:Name="o_playercolor"/>
+            <CheckBox Content="{DynamicResource o_playercolor}" x:Name="o_playercolor" Click="OnClick"/>
         </Expander.Header>
         <Grid x:Name="PickColorGrid">
             <Grid.ColumnDefinitions>
