--- a/UnofficialCrusaderPatchGUI/Views/Windows/MainWindow.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/Windows/MainWindow.xaml
@@ -71,7 +71,7 @@
                 <myControls:StartResource x:Name="StartResourceControl"/>
             </TabItem>
         </TabControl>
-        <Button Grid.Row="2" x:Name="btn_cancel" Content="{DynamicResource ui_cancel}" HorizontalAlignment="Left" Height="30" Margin="0,0,0,14" VerticalAlignment="Bottom" Width="120"/>
+        <Button Grid.Row="2" x:Name="btn_cancel" Content="{DynamicResource ui_cancel}" HorizontalAlignment="Left" Height="30" Margin="0,0,0,14" VerticalAlignment="Bottom" Width="120" Click="CancelButton_Click"/>
         <Button Grid.Row="2" x:Name="btn_uninstall" Content="{DynamicResource ui_uninstall}" HorizontalAlignment="Center" Height="30" Margin="0,0,0,14" VerticalAlignment="Bottom" Width="120" Click="OnUninstall"/>
         <Button Grid.Row="2" x:Name="btn_install" Content="{DynamicResource ui_install}" HorizontalAlignment="Right" Height="30" Margin="0,0,0,14" VerticalAlignment="Bottom" Width="120" Click="OnInstall"/>
     </Grid>
